# ResumeAssist

./: .gitattributes  .gitignore  MANIFEST.in  README.md
backend/: .env.sample  .gitignore  Makefile  README.md  prompt.ipynb  pyproject.toml  rendercv.ipynb  requirements.dev.txt  requirements.txt  setup.py
backend/.github/: lint.yml
backend/.github/workflows/: lint.yml  test_build.yml
backend/configs/: agents-config.yaml
backend/docker/: docker-compose.yml
backend/docs/: activity_diagram.md  ai_assist_sequence.md  compilation.md  major_workflow.md
backend/entrypoints/: resume_assist.sh
backend/prompts/: project.yaml  resume.yaml  self-intro.yaml  skills.yaml  work.yaml
backend/prompts/studio/: Makefile  README.md  requirements.txt  setup.py
backend/resume_assist/: __main__.py
backend/resume_assist/agent/: agent.py
backend/resume_assist/agent_hub/: base.py  enhancer_agent.py  keyword_extraction_agent.py  render_agent.py  retrieval_agent.py  reviewer_agent.py  summary_agent.py
backend/resume_assist/app/: config.py  enhancer_agent.py
backend/resume_assist/engines/: anthropic_engine.py  base_engine.py  factories.py
backend/resume_assist/functions/: __init__.py  cv_rendering.py  example_function.py  linkedin_api.py
backend/resume_assist/service/: cli.py
backend/resume_assist/utilities/: config_utils.py  embedding_utils.py  formatting_utils.py  prompt_utils.py
backend/tests/agent_hub/: test_enhancer_agent.py  test_keyword_extraction_agent.py  test_renderer_agent.py  test_retrieval_agent.py  test_reviewer_agent.py  test_summary_agent.py
backend/tests/engine/: test_anthropic_engine.py  test_factories.py
backend/tests/io/db/: test_neo4j.py
backend/tests/service/: test_cli.py
backend/tests/utilities/: test_config_utils.py  test_embedding_utils.py  test_formatting_utils.py  test_prompt_utils.py
(+79 files in other folders)
